# introduction-flow-matching-diffusion

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: marginal_velocity_decomposition_and_posterior_mcmc.ipynb
src/intro_fm_diffusion/: __init__.py  density.py  schedules.py  training.py  utils.py
src/intro_fm_diffusion/diagnostics/: __init__.py  conditional_field.py  decomposition.py  marginal_field.py
src/intro_fm_diffusion/notebook/: __init__.py  analysis.py  config.py  paths_demo.py  training.py
src/intro_fm_diffusion/paths/: __init__.py  paths_base.py  paths_gaussian.py  posterior_exact.py  posterior_is.py  posterior_sampling.py
src/intro_fm_diffusion/viz/: __init__.py  decomposition.py  density.py  posterior.py  training.py  velocity.py
