[project]
name = "intro_fm_diffusion"
version = "0.1.0"
description = "Introduction to flow matching and diffusion models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "scipy>=1.17.1",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
